base/apps/security/manual/minio-kes-sa-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    create-ca-bundle: "true"
