base/apps/security/manual/auto-unseal-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-unseal-vault-cluster
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "-9"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-unseal-vault-cluster
  template:
    metadata:
      labels:
        app: auto-unseal-vault-cluster
    spec:
      containers:
      - name: vault
        image: hashicorp/vault:1.16.1
        command:
        - /bin/sh
        - -c
        - |
          [...]
        securityContext:
          runAsUser: 100
          runAsGroup: 1000
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - mountPath: /etc/ssl/certs/ca.crt
          subPath: ca.crt
          name: ca-bundle
          readOnly: true
        - mountPath: /vault/userconfig/vault-tls
          name: userconfig-vault-tls
          readOnly: true
        - mountPath: /minio/kes/service-account
          name: minio-kes-service-account-token
          readOnly: true
        - mountPath: /minio/kes/kes-policy.hcl
          subPath: kes-policy.hcl
          name: kes-policy
          readOnly: true
      securityContext:
        runAsUser: 100
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: ca-bundle
        configMap:
          defaultMode: 422
          name: ca-bundle
      - name: userconfig-vault-tls
        secret:
          defaultMode: 420
          secretName: vault-tls
      - name: minio-kes-service-account-token
        secret:
          defaultMode: 420
          secretName: minio-kes-secret
      - name: kes-policy
        configMap:
          defaultMode: 420
          name: kes-policy
