base/apps/security/manual/gatekeeper-resource-constraints.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerRequests
metadata:
  name: container-must-have-requests
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "-20"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
    - cert-manager
    - gatekeeper-system
    - minio-operator
    - minio-tenant
    - replicator
    - spark-app
    - spark-operator
    - vault
  parameters:
    cpu: "1"
    memory: "4Gi"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "-20"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
    - cert-manager
    - gatekeeper-system
    - minio-operator
    - minio-tenant
    - replicator
    - spark-app
    - spark-operator
    - vault
  parameters:
    cpu: "2"
    memory: "8Gi"
